--- a/src/window.ui
+++ b/src/window.ui
@@ -84,10 +84,6 @@
                         <property name="hscrollbar_policy">never</property>
                         <property name="child">
                           <object class="GtkViewport">
-                            <property name="margin-bottom">5</property>
-                            <property name="margin-top">5</property>
-                            <property name="margin-start">5</property>
-                            <property name="margin-end">5</property>"
                             <property name="child">
                               <object class="GtkBox" id="sample_box">
                                 <property name="hexpand">False</property>
@@ -103,8 +99,8 @@
                         <property name="tooltip-text" translatable="yes">Select all data</property>
                         <property name="label">Select All</property>
                         <property name="action-name">app.select_all</property>
-                        <property name="margin-bottom">4</property>
-                        <property name="margin-end">5</property>
+                        <property name="margin-top">5</property>""
+                        <property name="margin-bottom">5</property>
                         <layout>
                           <property name="column">0</property>
                           <property name="row">1</property>
@@ -117,7 +113,9 @@
                         <property name="tooltip-text" translatable="yes">Deselect all data</property>
                         <property name="label">Select None</property>
                         <property name="action-name">app.select_none</property>
-                        <property name="margin-bottom">4</property>
+                        <property name="margin-start">5</property>
+                        <property name="margin-top">5</property>""
+                        <property name="margin-bottom">5</property>
                         <layout>
                           <property name="column">2</property>
                           <property name="row">1</property>
@@ -136,8 +134,7 @@
                       <property name="column-span">4</property>
                     </layout>
                   </object>
-                </child>&gt;
-
+                </child>                
                 <child>
                   <object class="GtkScrolledWindow">
                     <property name="focusable">1</property>
