--- a/src/window.ui
+++ b/src/window.ui
@@ -44,6 +44,12 @@
                         <property name="icon-name">edit-redo-symbolic</property>
                       </object>
                     </child>
+                    <child>
+                      <object class="GtkButton" id="selection_button">
+                        <property name="icon-name">selection-mode-symbolic</property>
+                        <property name="tooltip-text" translatable="yes">Select Items</property>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
@@ -61,7 +67,7 @@
                 <property name="action-name">app.save_data</property>
                 <property name="tooltip-text" translatable="yes">Save the data to your device</property>
               </object>
-            </child>&gt;&gt;
+            </child>
           </object>
         </child>
         <child>
@@ -76,8 +82,11 @@
                     <child>
                       <object class="GtkScrolledWindow" id="equation_scroll">
                         <property name="width-request">300</property>
-                        <property name="height-request">150</property>
+                        <property name="height-request">200</property>
                         <layout>
+                          <property name="column">0</property>
+                          <property name="row">0</property>
+                          <property name="column-span">2</property>
                           <property name="column-span">4</property>
                         </layout>
                         <property name="focusable">1</property>
@@ -85,42 +94,20 @@
                         <property name="child">
                           <object class="GtkViewport">
                             <property name="child">
-                              <object class="GtkBox" id="sample_box">
+                              <object class="GtkListBox" id="list_box">
+                                <property name="margin-bottom">5</property>
+                                <property name="margin-top">5</property>
+                                <property name="margin-start">5</property>
+                                <property name="margin-end">5</property>
                                 <property name="hexpand">False</property>
-                                <property name="orientation">vertical</property>
+                                <property name="selection-mode">multiple</property>
+                                <style>
+                                  <class name="boxed-list" />
+                                </style>
                               </object>
                             </property>
                           </object>
                         </property>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkButton" id="select_all_button">
-                        <property name="tooltip-text" translatable="yes">Select all data</property>
-                        <property name="label">Select All</property>
-                        <property name="action-name">app.select_all</property>
-                        <property name="margin-top">5</property>""
-                        <property name="margin-bottom">5</property>
-                        <layout>
-                          <property name="column">0</property>
-                          <property name="row">1</property>
-                          <property name="column-span">2</property>
-                        </layout>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkButton" id="select_none_button">
-                        <property name="tooltip-text" translatable="yes">Deselect all data</property>
-                        <property name="label">Select None</property>
-                        <property name="action-name">app.select_none</property>
-                        <property name="margin-start">5</property>
-                        <property name="margin-top">5</property>""
-                        <property name="margin-bottom">5</property>
-                        <layout>
-                          <property name="column">2</property>
-                          <property name="row">1</property>
-                          <property name="column-span">2</property>
-                        </layout>
                       </object>
                     </child>
                   </object>
@@ -134,7 +121,7 @@
                       <property name="column-span">4</property>
                     </layout>
                   </object>
-                </child>                
+                </child>
                 <child>
                   <object class="GtkScrolledWindow">
                     <property name="focusable">1</property>
