--- a/src/window.ui
+++ b/src/window.ui
@@ -45,7 +45,8 @@
                       </object>
                     </child>
                     <child>
-                      <object class="GtkButton" id="selection_button">
+                      <object class="GtkToggleButton" id="selection_button">
+                        <property name="action-name">app.toggle_selection_mode</property>                        
                         <property name="icon-name">selection-mode-symbolic</property>
                         <property name="tooltip-text" translatable="yes">Select Items</property>
                       </object>
@@ -76,12 +77,12 @@
             <child type="flap">
               <object class="GtkBox" id="selection_box">"
                 <property name="orientation">vertical</property>
-                <property name="width-request">300</property>
+                <property name="width-request">335</property>
                 <child>
                   <object class="GtkGrid" id="my_grid">
                     <child>
                       <object class="GtkScrolledWindow" id="equation_scroll">
-                        <property name="width-request">300</property>
+                        <property name="width-request">335</property>
                         <property name="height-request">200</property>
                         <layout>
                           <property name="column">0</property>
@@ -100,7 +101,7 @@
                                 <property name="margin-start">5</property>
                                 <property name="margin-end">5</property>
                                 <property name="hexpand">False</property>
-                                <property name="selection-mode">multiple</property>
+                                <property name="selection-mode">none</property>
                                 <style>
                                   <class name="boxed-list" />
                                 </style>
@@ -110,16 +111,6 @@
                         </property>
                       </object>
                     </child>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkSeparator">
-                    <property name="orientation">horizontal</property>
-                    <layout>
-                      <property name="column">0</property>
-                      <property name="row">2</property>
-                      <property name="column-span">4</property>
-                    </layout>
                   </object>
                 </child>
                 <child>
